[gd_scene load_steps=4 format=2]

[ext_resource path="res://tou.gd" type="Script" id=1]
[ext_resource path="res://23F0_color.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="wea" type="VBoxContainer"]
margin_right = 453.0
margin_bottom = 64.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 453.0
margin_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 79.0
margin_bottom = 64.0
custom_constants/separation = 11
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 83.0
margin_right = 438.0
margin_bottom = 64.0
alignment = 1

[node name="titleL" type="Label" parent="HBoxContainer/HBoxContainer2"]
margin_top = 7.0
margin_right = 355.0
margin_bottom = 30.0
text = "Hacer la tarea perrroooooooaaaaaaaaaaaaaaa"

[node name="timeL" type="Label" parent="HBoxContainer/HBoxContainer2"]
margin_top = 34.0
margin_right = 355.0
margin_bottom = 57.0
text = "‚è≤ 11/03/2023 - 20:00"

[connection signal="gui_input" from="." to="." method="_on_wea_gui_input"]
